dodalem laptop i walidacje

--- a/TradeJournal/appsettings.json
+++ b/TradeJournal/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=DESKTOP-UN8FJNF\\SQLEXPRESS;Database=TradeDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DevConnection": "Server=DESKTOP-MGHH80J\\SQLEXPRESS;Database=TradeDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
 }
+
+// laptop: DESKTOP-MGHH80J
+// desktop: DESKTOP-UN8FJNF
