--- a/TradeJournal/appsettings.json
+++ b/TradeJournal/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": "Server=DESKTOP-MGHH80J\\SQLEXPRESS;Database=TradeDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "your-very-secure-key-here-your-very-secure-key-here-your-very-secure-key-here",
+    "Issuer": "yourIssuer",
+    "Audience": "yourAudience",
+    "ExpiryMinutes": 2
   }
 }
 
