Pierdolona sesja nie dziala i gasnie odrazu

--- a/TradeJournal/appsettings.json
+++ b/TradeJournal/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=DESKTOP-MGHH80J\\SQLEXPRESS;Database=TradeDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DevConnection": "Server=DESKTOP-UN8FJNF\\SQLEXPRESS;Database=TradeDB;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "your-very-secure-key-here-your-very-secure-key-here-your-very-secure-key-here",
